--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>GOGCC - 달력</h1>
+        <h1>C2ber 일정</h1>
         <a href="manage.html">일정 및 공휴일 관리</a>
         <div class="controls">
             <select id="year"></select> 년
