--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #f5f5f5; }
         .container { max-width: 800px; margin: 0 auto; }
         h1 { color: #333; }
-        .calendar { width: 100%; border-collapse: collapse; margin: 20px 0; background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-        .calendar th, .calendar td { border: 1px solid #ddd; padding: 10px; text-align: center; }
-        .calendar th { background-color: #4CAF50; color: white; }
-        .calendar td { height: 80px; vertical-align: top; }
-        .weekend { color: gray; }
-        .holiday { background-color: #ffe6e6; }
-        .today { background-color: #e0f7fa; }
+        .calendar { width: 100%; max-width: 700px; border-collapse: collapse; margin: 20px auto; background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); table-layout: fixed; }
+        .calendar th, .calendar td { border: 1px solid #ddd; padding: 8px; text-align: center; vertical-align: top; }
+        .calendar th { background-color: #4CAF50; color: white; width: 100%; }
+        .calendar td { width: 100%; min-height: 100px; height: auto; box-sizing: border-box; }
+        .calendar td > div { font-size: 12px; word-wrap: break-word; overflow-wrap: break-word; white-space: normal; }
+        .holiday { background-color: #ffe6e6; } /* 공휴일, 일요일 */
+        .saturday { background-color: #e0f7fa; } /* 토요일 */
+        .today { background-color: #e6ffe6; } /* 오늘 */
         .controls { margin: 10px 0; }
         .controls select, .controls button { padding: 8px; margin: 0 5px; border-radius: 3px; border: 1px solid #ddd; }
         .controls button { background-color: #4CAF50; color: white; border: none; cursor: pointer; }
@@ -25,7 +26,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>C2ber 일정</h1>
+        <h1>GOGCC - 달력</h1>
         <a href="manage.html">일정 및 공휴일 관리</a>
         <div class="controls">
             <select id="year"></select> 년
@@ -102,17 +103,21 @@
                 const currentDate = new Date(currentYear, currentMonth - 1, date);
                 const dateStr = currentDate.toISOString().split('T')[0];
                 let className = '';
-                if (currentDate.getDay() === 0 || currentDate.getDay() === 6) {
-                    className += 'weekend';
-                }
+                let displayText = `<div>${date}`;
                 if (dateStr in holidays) {
-                    className += (className ? ' ' : '') + 'holiday';
+                    className += 'holiday';
+                    displayText += `<br>(${holidays[dateStr]})`;
+                } else if (currentDate.getDay() === 6) {
+                    className += 'saturday';
+                } else if (currentDate.getDay() === 0) {
+                    className += 'holiday';
                 }
                 const today = new Date();
                 if (date === today.getDate() && currentMonth === today.getMonth() + 1 && currentYear === today.getFullYear()) {
                     className += (className ? ' ' : '') + 'today';
                 }
-                row.innerHTML += `<td class="${className}">${date}<br>${getEventsForDate(dateStr)}</td>`;
+                displayText += `</div>${getEventsForDate(dateStr)}`;
+                row.innerHTML += `<td class="${className}">${displayText}</td>`;
                 date++;
             }
 
@@ -129,13 +134,17 @@
             for (let schedule in events) {
                 events[schedule].forEach(event => {
                     if (event.date.startsWith(`${currentYear}-${currentMonth.toString().padStart(2, '0')}`)) {
-                        monthEvents.push({ date: event.date, title: `${schedule}: ${event.title}` });
+                        let displayText = event.date;
+                        if (event.date in holidays) {
+                            displayText += ` (${holidays[event.date]})`;
+                        }
+                        monthEvents.push({ date: event.date, title: `${displayText}: ${schedule}: ${event.title}` });
                     }
                 });
             }
             monthEvents.sort((a, b) => a.date.localeCompare(b.date));
             monthEvents.forEach(event => {
-                eventHtml += `<div>${event.date}: ${event.title}</div>`;
+                eventHtml += `<div>${event.title}</div>`;
             });
             eventList.innerHTML = eventHtml;
         }
