--- a/manage.html
+++ b/manage.html
@@ -66,31 +66,7 @@
 
     <script>
         let events = JSON.parse(localStorage.getItem('events')) || {};
-        let holidays = JSON.parse(localStorage.getItem('holidays')) || {
-            '2025-01-01': '신정',
-            '2025-01-28': '설날',
-            '2025-01-29': '설날',
-            '2025-01-30': '설날',
-            '2025-03-01': '삼일절',
-            '2025-03-03': '삼일절 대체공휴일',
-            '2025-05-05': '어린이날',
-            '2025-05-06': '대체공휴일',
-            '2025-06-06': '현충일',
-            '2025-08-15': '광복절',
-            '2025-10-03': '개천절',
-            '2025-10-05': '추석',
-            '2025-10-06': '추석',
-            '2025-10-07': '추석',
-            '2025-10-08': '추석 대체공휴일',
-            '2025-10-09': '한글날',
-            '2025-12-25': '크리스마스',
-            '2026-01-01': '신정',
-            '2026-02-16': '설날',
-            '2026-02-17': '설날',
-            '2026-02-18': '설날',
-            '2026-03-01': '삼일절'
-        };
-        localStorage.setItem('holidays', JSON.stringify(holidays));
+        let holidays = JSON.parse(localStorage.getItem('holidays')) || {};
 
         function isValidDay(date, dayType) {
             const dateStr = date.toISOString().split('T')[0];
